==> iysheng/rt-thread/bsp/gd32vf103v-eval/drivers/drv_gpio.c <==
#include "drv_gpio.h"
#include <rthw.h>
#define EXTI_(x)  BIT(x)
#define ITEM_NUM(items) sizeof(items) / sizeof(items[0])

static void gd32vf_pin_write(rt_device_t dev, rt_base_t pin, rt_base_t value)
{
    const struct pin_index *index;

    index = get_pin(pin);
    if (index == RT_NULL)
    {
        return;
    }

    gpio_bit_write(index->gpio_periph, index->pin, (bit_status)value);
}

static int gd32vf_pin_read(rt_device_t dev, rt_base_t pin)
{
    int value;
    const struct pin_index *index;

    index = get_pin(pin);
    if (index == RT_NULL)
    {
        return PIN_LOW;
    }

    value = gpio_input_bit_get(index->gpio_periph, index->pin);
    return value;
}

static void gd32vf_pin_mode(rt_device_t dev, rt_base_t pin, rt_base_t mode)
{
    const struct pin_index *index;

    index = get_pin(pin);
    if (index == RT_NULL)
    {
        return;
    }

    /* Configure GPIO_InitStructure */
    if (mode == PIN_MODE_OUTPUT)
    {
        /* output setting */
        gpio_init(index->gpio_periph, GPIO_MODE_OUT_PP, GPIO_OSPEED_50MHZ, index->pin);
        gpio_bit_reset(index->gpio_periph, index->pin);
    }
    else if (mode == PIN_MODE_INPUT)
    {
        /* input setting: not pull. */
        gpio_init(index->gpio_periph, GPIO_MODE_IN_FLOATING, GPIO_OSPEED_50MHZ, index->pin);
        gpio_bit_reset(index->gpio_periph, index->pin);
    }
    else if (mode == PIN_MODE_INPUT_PULLUP)
    {
        /* input setting: pull up. */
        gpio_init(index->gpio_periph, GPIO_MODE_IPU, GPIO_OSPEED_50MHZ, index->pin);
        gpio_bit_reset(index->gpio_periph, index->pin);
    }
    else if (mode == PIN_MODE_INPUT_PULLDOWN)
    {
        /* input setting: pull down. */
        gpio_init(index->gpio_periph, GPIO_MODE_IPD, GPIO_OSPEED_50MHZ, index->pin);
        gpio_bit_reset(index->gpio_periph, index->pin);
    }
    else if (mode == PIN_MODE_OUTPUT_OD)
    {
        /* output setting: od. */
        gpio_init(index->gpio_periph, GPIO_MODE_OUT_OD, GPIO_OSPEED_50MHZ, index->pin);
        gpio_bit_reset(index->gpio_periph, index->pin);
    }
}

static rt_err_t gd32vf_pin_irq_enable(struct rt_device *device, rt_base_t pin,
                                     rt_uint32_t enabled)
{
    const struct pin_index *index;
    const struct pin_irq_map *irqmap;
    rt_base_t level;
    rt_int32_t irqindex = -1;

    index = get_pin(pin);
    if (index == RT_NULL)
    {
        return RT_ENOSYS;
    }

        /* configure pin as input */
    gpio_init(index->gpio_periph, GPIO_MODE_IN_FLOATING, GPIO_OSPEED_50MHZ, index->pin);
    if (enabled == PIN_IRQ_ENABLE)
    {
        irqindex = bit2bitno(index->pin);
        if (irqindex < 0 || irqindex >= ITEM_NUM(pin_irq_map))
        {
            return RT_ENOSYS;
        }

        level = rt_hw_interrupt_disable();

        if (pin_irq_hdr_tab[irqindex].pin == -1)
        {
            rt_hw_interrupt_enable(level);
            return RT_ENOSYS;
        }

        irqmap = &pin_irq_map[irqindex];

        /* enable and set EXTI interrupt to the lowest priority */
        eclic_irq_enable(irqmap->irqno, 1, 1);
        gpio_exti_source_select(GPIO_PORT_SOURCE_GPIOA, GPIO_PIN_SOURCE_0);
        /* Configure GPIO_InitStructure */
        switch (pin_irq_hdr_tab[irqindex].mode)
        {
        case PIN_IRQ_MODE_RISING:
            exti_init(EXTI_(irqindex), EXTI_INTERRUPT, EXTI_TRIG_RISING);
            break;
        case PIN_IRQ_MODE_FALLING:
            exti_init(EXTI_(irqindex), EXTI_INTERRUPT, EXTI_TRIG_FALLING);
            break;
        case PIN_IRQ_MODE_RISING_FALLING:
            exti_init(EXTI_(irqindex), EXTI_INTERRUPT, EXTI_TRIG_BOTH);
            break;
        }

        pin_irq_enable_mask |= irqmap->pinbit;

        exti_interrupt_flag_clear(EXTI_(index->pin));

        rt_hw_interrupt_enable(level);
    }
    else if (enabled == PIN_IRQ_DISABLE)
    {
        irqmap = get_pin_irq_map(index->pin);
        if (irqmap == RT_NULL)
        {
            return RT_ENOSYS;
        }

        level = rt_hw_interrupt_disable();

        gpio_bit_reset(index->gpio_periph, index->pin);

        pin_irq_enable_mask &= ~irqmap->pinbit;

        eclic_irq_disable(irqmap->irqno);
        exti_interrupt_flag_clear(EXTI_(index->pin));

        rt_hw_interrupt_enable(level);
    }
    else
    {
        return -RT_ENOSYS;
    }

    return RT_EOK;
}

void EXTI0_IRQHandler(void)
{
    if(EXTI_PD & (uint32_t) EXTI_0)
    {
        exti_interrupt_flag_clear(EXTI_0);
        pin_irq_hdr(bit2bitno(GPIO_PIN_0));
    }
}

void EXTI1_IRQHandler(void)
{
    if(EXTI_PD & (uint32_t) EXTI_1)
    {
        exti_interrupt_flag_clear(EXTI_1);
        pin_irq_hdr(bit2bitno(GPIO_PIN_1));
    }
}

void EXTI2_IRQHandler(void)
{
    if(EXTI_PD & (uint32_t) EXTI_2)
    {
        exti_interrupt_flag_clear(EXTI_2);
        pin_irq_hdr(bit2bitno(GPIO_PIN_2));
    }
}

void EXTI3_IRQHandler(void)
{
    if(EXTI_PD & (uint32_t) EXTI_3)
    {
        exti_interrupt_flag_clear(EXTI_3);
        pin_irq_hdr(bit2bitno(GPIO_PIN_3));
    }
}

void EXTI4_IRQHandler(void)
{
    if(EXTI_PD & (uint32_t) EXTI_4)
    {
        exti_interrupt_flag_clear(EXTI_4);
        pin_irq_hdr(bit2bitno(GPIO_PIN_4));
    }
}
